--- a/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/FormAbout.resx
+++ b/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/FormAbout.resx
@@ -118,27 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="labelInfo.Text" xml:space="preserve">
-    <value>Разработчик Ваганов Михаил ИИПБ 24 2
+    <value>Разработчик Ваганов Михаил 
+Группа ИИПБ 24 2
 
-Разработка на с#
+Программа разработана в рамках изучения языка C#
 
-Можете посмотреть на очень милое фото
+Тюменский индустриальный универститет (C) 2024
+Высшая школа цифровых технологий (C) 2024
+Внутреннее имя: Tyuiu.VaganovMA.Sprint7.TaskProject.V13
 
-В проекте реализовать следующий функционал (Back-end):
+Можете посмотреть на очень милое фото♥
 
-Ввод, редактирование, поиск, сортировка, 
-фильтрация, сохранения в файл(ы), чтение из фала(лов) данных.
- Реализовать элементы статистики (количество, сумма, среднее,
- min, max и т.д.). График (гистограмма / функция / диаграмм).
- Использовать для функционала библиотеку классов и unit-тесты.
 
-ПРЕДМЕТНАЯ ОБЛАСТЬ: Каталог видео клипов
-
-Возможные характеристики данных (можно добавить свои):
-
-·        код видеоленты, дата записи, длительность, тема, стоимость,
-
-·        сведения об актёре: Фамилия, имя отчество, амплуа.
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
